--- a/jenkinsfile.pipeline.properties
+++ b/jenkinsfile.pipeline.properties
@@ -1,5 +1,5 @@
 distribution_property=testing
 tag_property=RanByJenkins_FromPropertiesFile
 gradle_log_level=quiet
-prod_ip= '172.31.22.115'
+prod_ip= 172.31.22.115
 stage_ip= 'staginiphere'
