--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ task zip(type: Zip) {
 		include "routes/**"
 		include "views/**"
 	}
-	destinationDirectory(file("dist"))
+	destinationDirectory = (file("dist"))
 	baseName "trainSchedule"
 }
 
