--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ task zip(type: Zip) {
 		include "views/**"
 	}
 	destinationDirectory = (file("dist"))
-	baseName "trainSchedule"
+	archiveBaseName.set("trainSchedule")
 }
 
 //declare task dependencies
